# AD4Connect

./: .gitignore  LICENSE  README.md  pyproject.toml
ad4core/: __init__.py  client.py  models.py  parser.py
ad4ctl/: __init__.py  cli.py  config.py
docs/: ROADMAP.md
macos/: Package.swift  README.md  build_app.sh
macos/Sources/AD4Connect/: AD4ConnectApp.swift  CameraView.swift  ContentView.swift  PrinterViewModel.swift
macos/Sources/AD4ConnectKit/: CameraStream.swift  ConfigStore.swift  FlashForgeClient.swift  PrinterDiscovery.swift  PrinterStatus.swift  StatusParser.swift  TCPSocket.swift
macos/Tests/AD4ConnectKitTests/: ConfigStoreTests.swift  DiscoveryTests.swift  StatusParserTests.swift
scripts/: orca_ad4_upload.py
tests/: test_config.py  test_parser.py
