[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad4connect"
version = "0.2.0"
description = "Command-line and library tooling for FlashForge Adventurer 3/4 network control"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AD4Connect Contributors" }]
keywords = ["flashforge", "adventurer", "3d-printing", "gcode"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
]

[project.scripts]
ad4ctl = "ad4ctl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ad4core*", "ad4ctl*"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
